<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_profilo_promotore_visualizzabile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".menu.MainActivityPromotore">

    <LinearLayout
        android:id="@+id/linear_layout_profilo_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_profilo_promotore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visualizza il tuo profilo"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_nome_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_profilo_promotore_visualizzabile"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_nome_promotore_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_nome_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_cognome_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_nome_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_cognome_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cognome"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_cognome_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_sesso_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_cognome_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_sesso_promotore_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sesso"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView_sesso_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_eta_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_sesso_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_eta_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Età:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_eta_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_località_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_eta_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_localita_promotore_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Località"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_localita_promtoore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_biografia_promotore_visualizzabile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_località_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_biografia_visualizzabile_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Biografia:"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_biografia_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_numero_telefono_promotore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_biografia_promotore_visualizzabile"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_numero_telefono_promotore_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Numero di telefono"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_numero_telefono_promotore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_link_social_promotore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_numero_telefono_promotore"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_link_social_promotore_etichetta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Link social"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_link_social_promotore_visualizzabile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_button_modifica_e_elimina_profilo_promotore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_link_social_promotore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_modifica_profilo_promotore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modifica" />

        <Button
            android:id="@+id/button_elimina_profilo_promotore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Elimina" />
        <!--   android:onClick="eliminaProfilo"-->
        <!--    android:onClick="modificaProfiloPromotore"-->
    </LinearLayout>

</RelativeLayout>
