...
    >

    <group android:checkableBehavior="single">
        <item
            android:checkable="true"
            android:id="@+id/mio_profilo"
            android:title="Mio Profilo" />
        <item
            android:id="@+id/miei_eventi"
            android:title="Miei Eventi" />
        <item
            android:id="@+id/cerca_band"
            android:title="Cerca Band" />
        <item
            android:id="@+id/cerca_artisti"
            android:title="Cerca Artisti"/>
        <item
            android:id="@+id/cerca_promotore"
            android:title="Cerca Promotori" />
        <item
            android:id="@+id/cerca_evento"
            android:title="Cerca Evento" />
        <item
            android:id="@+id/cerca_proposte_evento"
            android:title="Cerca Proposte Evento" />

        <item
            android:id="@+id/logout"
            android:title="Logout" />
    </group>

...
