...
        android:id="@+id/linear_layout_list_view_band"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_lista_band"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Band"
            android:textSize="25dp"
            android:textStyle="bold" />
...
