<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_list_band_e_artisti"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_layout_list_view_artisti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_lista_artisti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/linear_layout_list_view_artisti"
            android:layout_gravity="center_horizontal"
            android:text="Artisti"
            android:textSize="25dp"
            android:textStyle="bold" />


        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ListView>


    </LinearLayout>




</RelativeLayout>